@@ -23,6 +23,7 @@ Juliusz Chroboczek
 Mats Bengtsson
 Nicolas Sceaux
 Pal Benko
+Sebastiano Vigna
 Tatsuya Ono
 Werner Lemberg
 Yuval Harel
